src/css/styles.css
/* ... */
/* medium */

@media screen and (max-width: 699px) and (min-width: 550px) {

    .family-page-container {
        height: 1840px;
    }

    .family-row1-container {
        width: 270px;
    }

    .bern-caption {
        font-size: 14px;
    }

    .bern-mu-photo {
        width: 270px;
    }

    .family-row2-container {
        margin-right: 0px;
    }

    .tree-steve, .tree-julie, .tree-glyn {
        max-width: 164px;
    }

    .row2-photo {
        width: 125px;
    }

    .row2-caption {
        font-size: 12px;
        width: 110px;
    }

    .family-row3-section {
        max-width: 780px;
        margin: 0 auto; 
        padding-left: 10px;
        padding-right: 10px;
    }

    .tree-ant, .tree-mark, .tree-jamie, .tree-emily, .tree-dan, .tree-ro, .tree-hal {
        padding: 15px;
        max-width: 150px;
        margin-right: 0px;
        margin-bottom: 15px;
    }

    .tree-dan {
        margin-left: 7px;
    }

    .tree-hal {
        margin-left: 7px;
    }

    .row3-photo {
        width: 120px;
    }

    .row3-caption {
        font-size: 12px;
        width: 120px;
    }

    .mark-caption, .jamie-caption {
        width: 105px;
    }

    .steve-kids {
        display: initial; 
    }
    
    .julie-kids {
        display: initial;  
    }
    
    .glyn-kids {
        display: initial;
    }

    .family-row4-section {
        margin-left: 20px;
    }

    .ant-kids-container {
        margin-right: 70px;
    }

    .row4-caption-parent, .row4-caption {
        font-size: 12px;
        width: 80px;
    }
}

/* small */

@media screen and (max-width: 549px) and (min-width: 451px) {

    .family-page-container {
        height: 1650px;
    }

    .family-row1-container {
        width: 270px;
    }

    .bern-caption {
        font-size: 14px;
    }

    .bern-mu-photo {
        width: 270px;
    }

    .family-row2-container {
        margin-right: 0px;
    }

    .tree-steve, .tree-julie, .tree-glyn {
        max-width: 134px;
    }

    .row2-photo {
        width: 100px;
    }

    .row2-caption {
        font-size: 12px;
        width: 110px;
    }

    .family-row3-section {
        max-width: 780px;
        margin: 0 auto; 
        padding-left: 10px;
        padding-right: 10px;
    }

    .tree-ant, .tree-mark, .tree-jamie, .tree-emily, .tree-dan, .tree-ro, .tree-hal {
        padding: 10px;
        max-width: 115px;
        margin-right: 0px;
        margin-bottom: 10px;
    }

    .tree-dan {
        margin-left: 7px;
    }

    .tree-hal {
        margin-left: 7px;
    }

    .row3-photo {
        width: 90px;
    }

    .row3-caption {
        font-size: 10px;
        width: 98px;
    }

    .mark-caption, .jamie-caption {
        width: 85px;
    }

    .steve-kids {
        display: initial; 
    }
    
    .julie-kids {
        display: initial;  
    }
    
    .glyn-kids {
        display: initial;
    }

    .family-row4-section {
        margin-left: 20px;
    }

    .ant-kids-container {
        margin-right: 45px;
    }

    .row4-caption-parent, .row4-caption {
        font-size: 11px;
        width: 78px;
    }
}





/* NAV BAR RESIZE */

@media only screen and (min-width:951px) {

    .dropdown-image {
        display: none;
    }

    .dropdown-buttons {
        display: none;
    }    
}


@media screen and (max-width: 950px) and (min-width: 700px) {

    .dropdown-header {
        position: relative;
        width: 60px;
    }

    
    
    .dropdown-icon {
        
    }
    
    .dropdown-image {
        width: 60px; 
        margin-bottom: 20px;  
    }

    .x-menu-image {
        width: 60px;
        height: 60px;
        position: absolute;
        left: 0;
    }

    .top-banner {
        /* overflow: hidden; */
    }

    .nav {
        display: none;
    }

    .nav-buttons {
        display: initial;
        height: 300px;
        position: relative;
        z-index: 3;
    }

    .dropdown-buttons {
        list-style: none;
        display: none;
        position: absolute;
        margin-top: 74px;
        margin-left: -140px;
        width: 200px;
        height: 300px;
        padding-left: 10px;
        padding-top: 130px;
        background-color: #8499B1;
    }

    .dropdown-header.open ul {
        position: relative;
        display: block;
    }

    .dropdown-buttons li {
        height: 2.5rem;    
    }

    .dropdown-buttons li a:hover {
        color: black;
    }

    .dropdown-buttons li a {
        font-size: 14px;
        padding: 10px 10px;
        color: white;
        font-family: 'Montserrat', sans-serif;
        font-weight: 500;
    }
}

@media screen and (max-width: 699px) and (min-width: 451px) {

    .dropdown-header {
        width: 45px;
        position: relative;
    }
    
    .dropdown-icon {
    
    }
    
    .dropdown-image {
        width: 45px;
    }

    .x-menu-image {
        width: 45px;
        height: 45px;
        position: absolute;
        left: 0;
    }

    .nav {
        display: none;
    }

    .nav-buttons {
        /* display: initial;
        height: 300px;
        position: relative;
        z-index: 3; */
        display: none;
    }

    .dropdown-buttons {
        list-style: none;
        display: none;
        position: absolute;
        margin-top: 60px;
        margin-left: -140px;
        width: 200px;
        height: 300px;
        padding-left: 10px;
        padding-top: 130px;
        background-color: #8499B1;
    }

    .dropdown-header.open ul {
        position: relative;
        display: block;
    }

    .dropdown-buttons li {
        height: 2.5rem;    
    }

    .dropdown-buttons li a:hover {
        color: black;
    }

    .dropdown-buttons li a {
        font-size: 14px;
        padding: 10px 10px;
        color: white;
        font-family: 'Montserrat', sans-serif;
        font-weight: 500;
    }
}
/* ... */

